[VirtualInput] Added keyboard handling to virtual input
- Remade "copyFrom" to "moveFrom" and making it clear the keyboard that is put in
- Added more documentation to MixinMinecraft
- Attempted to reduce memory footprint in Virtual keyboard and mouse